Добавил тесты и описания

--- a/cash/pom.xml
+++ b/cash/pom.xml
@@ -101,7 +101,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <testFramework>JUNIT5</testFramework>
-                    <baseClassForTests>ru.yandex.practicum.cash.contact.ContractTest</baseClassForTests>
+                    <baseClassForTests>ru.yandex.practicum.cash.contract.ContractTest</baseClassForTests>
                 </configuration>
             </plugin>
         </plugins>
