--- a/umbrella-chart/charts/generator/templates/configmap.yaml
+++ b/umbrella-chart/charts/generator/templates/configmap.yaml
@@ -10,3 +10,4 @@ data:
   #Quote нужен для экранирования
   BOOTSTRAP_SERVERS_CONFIG: {{ .Values.config.bootstrap | quote }}
   EXCHANGE_TOPIC: {{ .Values.config.exchange_topic | quote }}
+  ZIPKIN_URL: {{ .Values.config.zipkin_url | quote }}
