--- a/umbrella-chart/charts/transfer/templates/configmap.yaml
+++ b/umbrella-chart/charts/transfer/templates/configmap.yaml
@@ -22,3 +22,4 @@ data:
   EXCHANGE_CONVERT_URL: {{ .Values.config.exchange_convert_url | quote }}
   BOOTSTRAP_SERVERS_CONFIG: {{ .Values.config.bootstrap | quote }}
   NOTIFICATION_TOPIC: {{ .Values.config.notification_topic | quote }}
+  ZIPKIN_URL: {{ .Values.config.zipkin_url | quote }}
