--- a/umbrella-chart/Chart.yaml
+++ b/umbrella-chart/Chart.yaml
@@ -37,3 +37,6 @@ dependencies:
   - name: kafka
     version: "0.1.0"
     repository: "file://charts/kafka"
+  - name: zipkin
+    version: "0.1.0"
+    repository: "file://charts/zipkin"
