--- a/umbrella-chart/charts/cash/templates/configmap.yaml
+++ b/umbrella-chart/charts/cash/templates/configmap.yaml
@@ -18,3 +18,4 @@ data:
   BLOCKER_URL: {{ .Values.config.blocker_url | quote }}
   BOOTSTRAP_SERVERS_CONFIG: {{ .Values.config.bootstrap | quote }}
   NOTIFICATION_TOPIC: {{ .Values.config.notification_topic | quote }}
+  ZIPKIN_URL: {{ .Values.config.zipkin_url | quote }}
