--- a/umbrella-chart/charts/exchange/values.yaml
+++ b/umbrella-chart/charts/exchange/values.yaml
@@ -18,3 +18,4 @@ config:
   exchange_topic: "exchange-dto-list-topic"
   exchange_group_id: "exchange"
   bootstrap: "kafka:9092"
+  zipkin_url: "http://zipkin/api/v2/spans"
