--- a/umbrella-chart/charts/front/templates/configmap.yaml
+++ b/umbrella-chart/charts/front/templates/configmap.yaml
@@ -18,3 +18,4 @@ data:
   CASH_URL: {{ .Values.config.cash_url | quote }}
   TRANSFER_PATCH_URL: {{ .Values.config.transfer_patch_url | quote }}
   TRANSFER_GET_URL: {{ .Values.config.transfer_get_url | quote }}
+  ZIPKIN_URL: {{ .Values.config.zipkin_url | quote }}
