--- a/umbrella-chart/charts/front/values.yaml
+++ b/umbrella-chart/charts/front/values.yaml
@@ -23,3 +23,4 @@ config:
   account_client_secret: "cuqu6hPnGUhwcFlDijZLCYDZ8HuQJB4s"
   cash_client_secret: "lIIF4SDSTlxvpZK4RfDwwgBDgiW3NNbU"
   transfer_client_secret: "izeEdZjAqR6gbTF2HtdUmQfXgQj0mRMf"
+  zipkin_url: "http://zipkin/api/v2/spans"
