--- a/umbrella-chart/charts/transfer/values.yaml
+++ b/umbrella-chart/charts/transfer/values.yaml
@@ -27,3 +27,4 @@ config:
   exchange_client_secret: "d2BXJ8UKxrdbF8TybLsZp0vsIGXCwt8Y"
   notification_topic: "transfer-notification-topic"
   bootstrap: "kafka:9092"
+  zipkin_url: "http://zipkin/api/v2/spans"
