--- a/transfer/pom.xml
+++ b/transfer/pom.xml
@@ -105,8 +105,11 @@
 		</dependency>
 		<dependency>
 			<groupId>io.zipkin.brave</groupId>
-
 			<artifactId>brave-instrumentation-kafka-clients</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
