--- a/umbrella-chart/Chart.yaml
+++ b/umbrella-chart/Chart.yaml
@@ -40,3 +40,6 @@ dependencies:
   - name: zipkin
     version: "0.1.0"
     repository: "file://charts/zipkin"
+  - name: prometheus
+    version: "0.1.0"
+    repository: "file://charts/prometheus"
