--- a/generator/src/test/resources/application.yaml
+++ b/generator/src/test/resources/application.yaml
@@ -7,3 +7,7 @@ spring:
   kafka:
     topic:
       exchange: ${EXCHANGE_TOPIC:exchange-dto-list-topic}
+
+kafka-log:
+  topic:
+    log: ${LOG_TOPIC:log-topic}
