--- a/transfer/src/test/resources/application.yaml
+++ b/transfer/src/test/resources/application.yaml
@@ -8,6 +8,9 @@ spring:
   # Отключаем Flyway
   flyway:
     enabled: false
+kafka-log:
+  topic:
+    log: ${LOG_TOPIC:log-topic}
 urls:
   account:
     get:
