--- a/blocker/src/main/resources/application.yaml
+++ b/blocker/src/main/resources/application.yaml
@@ -14,8 +14,14 @@ management:
 spring:
   application:
     name: blocker
+  kafka:
+    bootstrap-servers: ${BOOTSTRAP_SERVERS_CONFIG:localhost:9092}
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: ${SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI:http://localhost:9090/realms/master}
+
+kafka-log:
+  topic:
+    log: ${LOG_TOPIC:log-topic}
