--- a/cash/src/main/resources/application.yaml
+++ b/cash/src/main/resources/application.yaml
@@ -114,6 +114,10 @@ resilience4j:
           - org.springframework.web.client.HttpClientErrorException$NotFound
           - org.springframework.web.client.HttpClientErrorException
 
+kafka-log:
+  topic:
+    log: ${LOG_TOPIC:log-topic}
+
 urls:
   account:
     get:
