--- a/notification/src/main/resources/application.yaml
+++ b/notification/src/main/resources/application.yaml
@@ -42,3 +42,7 @@ spring:
     baseline-on-migrate: true
     validate-on-migrate: true
     out-of-order: false
+
+kafka-log:
+  topic:
+    log: ${LOG_TOPIC:log-topic}
