--- a/umbrella-chart/charts/account/values.yaml
+++ b/umbrella-chart/charts/account/values.yaml
@@ -17,4 +17,5 @@ config:
   keycloak_url: "http://keycloak/realms/master"
   notification_topic: "account-notification-topic"
   bootstrap: "kafka:9092"
+  log_topic: "log-topic"
   zipkin_url: "http://zipkin/api/v2/spans"
