--- a/umbrella-chart/charts/blocker/templates/configmap.yaml
+++ b/umbrella-chart/charts/blocker/templates/configmap.yaml
@@ -10,3 +10,5 @@ data:
   #Quote нужен для экранирования
   SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: {{ .Values.config.keycloak_url | quote }}
   ZIPKIN_URL: {{ .Values.config.zipkin_url | quote }}
+  BOOTSTRAP_SERVERS_CONFIG: {{ .Values.config.bootstrap | quote }}
+  LOG_TOPIC: {{ .Values.config.log_topic | quote }}
