--- a/umbrella-chart/charts/notification/templates/configmap.yaml
+++ b/umbrella-chart/charts/notification/templates/configmap.yaml
@@ -12,6 +12,7 @@ data:
   SPRING_DATASOURCE_USERNAME: {{ .Values.config.database_username }}
   SPRING_FLYWAY_URL: {{ .Values.config.data_base_fly_way_url | quote }}
   BOOTSTRAP_SERVERS_CONFIG: {{ .Values.config.bootstrap | quote }}
+  LOG_TOPIC: {{ .Values.config.log_topic | quote }}
   ACCOUNT_NOTIFICATION_TOPIC: {{ .Values.config.account_notification_topic | quote }}
   TRANSFER_NOTIFICATION_TOPIC: {{ .Values.config.transfer_notification_topic | quote }}
   CASH_NOTIFICATION_TOPIC: {{ .Values.config.cash_notification_topic | quote }}
