--- a/umbrella-chart/charts/transfer/templates/configmap.yaml
+++ b/umbrella-chart/charts/transfer/templates/configmap.yaml
@@ -21,5 +21,6 @@ data:
   EXCHANGE_EXCHANGE_URL: {{ .Values.config.exchange_exchange_url | quote }}
   EXCHANGE_CONVERT_URL: {{ .Values.config.exchange_convert_url | quote }}
   BOOTSTRAP_SERVERS_CONFIG: {{ .Values.config.bootstrap | quote }}
+  LOG_TOPIC: {{ .Values.config.log_topic | quote }}
   NOTIFICATION_TOPIC: {{ .Values.config.notification_topic | quote }}
   ZIPKIN_URL: {{ .Values.config.zipkin_url | quote }}
